Support running application from IntelliJ & gradle at the same time.